log
Thu 20 Apr 2023 08:15:29 PM UTC: 
 tests:  1|8
total_score: 0/70
88018bf
Fri 21 Apr 2023 12:37:08 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
20db637
Fri 21 Apr 2023 12:46:07 AM UTC: 
 treemap.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
ce7295f
Fri 21 Apr 2023 12:50:56 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
c0b7faf
Fri 21 Apr 2023 12:51:16 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
68e4b75
Fri 21 Apr 2023 12:52:32 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
a08dc08
Fri 21 Apr 2023 12:54:58 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
dc5eeeb
Fri 21 Apr 2023 01:01:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
82eabf0
Fri 21 Apr 2023 01:02:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
c301ce6
Fri 21 Apr 2023 01:02:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
b8f1ab4
Fri 21 Apr 2023 01:05:50 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
625198b
Fri 21 Apr 2023 01:11:56 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
76689b0
Fri 21 Apr 2023 01:13:20 AM UTC: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  5|7
total_score: 5/70
de6251f
Fri 21 Apr 2023 01:14:37 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
7bf244e
Fri 21 Apr 2023 01:15:52 AM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  8|7
total_score: 5/70
e1af839
Fri 21 Apr 2023 01:23:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
877bb97
Fri 21 Apr 2023 01:24:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
5007798
Fri 21 Apr 2023 01:24:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
60f9822
Fri 21 Apr 2023 01:25:23 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
2f8e4e1
Fri 21 Apr 2023 01:26:32 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
168bf0e
Fri 21 Apr 2023 01:26:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
9a5df5c
Fri 21 Apr 2023 01:41:23 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
4714675
Fri 21 Apr 2023 01:45:48 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
837380b
Fri 21 Apr 2023 01:45:56 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
f53e8e7
Fri 21 Apr 2023 01:50:34 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
253101d
Fri 21 Apr 2023 01:50:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
19caafa
Fri 21 Apr 2023 01:53:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
ded33ac
Fri 21 Apr 2023 06:38:28 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|7
total_score: 5/70
c2154ff
Fri 21 Apr 2023 06:41:15 PM UTC: 
 treemap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  6|7
total_score: 5/70
66ecd2a
Fri 21 Apr 2023 06:41:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
360fdb0
Fri 21 Apr 2023 06:42:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
d1ccc25
Fri 21 Apr 2023 06:45:20 PM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  6|7
total_score: 5/70
7e0b3b6
Fri 21 Apr 2023 06:46:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
3fa5a75
Fri 21 Apr 2023 06:58:06 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|7
total_score: 5/70
37048b6
Fri 21 Apr 2023 07:02:21 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:59:17: error: ‘minimun’ is used uninitialized [-Werror=uninitialized]
   59 |   while(minimun != NULL){
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
d4740ef
Fri 21 Apr 2023 07:03:08 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
1631471
Fri 21 Apr 2023 07:03:45 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|7
total_score: 5/70
9c69d79
Fri 21 Apr 2023 07:04:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
212ffef
Fri 21 Apr 2023 07:05:58 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 5/70
73e5096
Fri 21 Apr 2023 07:16:25 PM UTC: 
 treemap.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c:69:3: error: expected identifier or ‘(’ before ‘}’ token
   69 |   }
      |   ^
Compilation failed
8182891
Fri 21 Apr 2023 07:25:59 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0d0acad
